--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=employeeManagementSystem
 #spring.application.name=demoApp
 # MySQL Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/Student?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/employee?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
