--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=employeeManagementSystem
 # MySQL Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/employees?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Pranav@2004
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
